# tapestry

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  west.yml
.github/workflows/: ci.yml
examples/collective-formation/: CMakeLists.txt  Kconfig  README.md  prj.conf
examples/collective-formation/boards/: bbc_microbit_v2.conf
examples/collective-formation/src/: formation.c  formation.h  main.c
sdk/: README.md
sdk/examples/: hello_swarm.py
sdk/include/tapestry/: app.h  choreo.h
sdk/python/tapestry/: __init__.py  app.py  bse.py  bse_stub.py  choreo.py
sdk/src/: app_stub.c  choreo_stub.c
tapestry-bse-sim/: README.md  bse_stub.py
tapestry-csm-sim/: sim_protocol.h
tapestry-csm-sim/orchestrator/: broker.py  main.py  plot.py  protocol.py  scenarios.py  telemetry.csv  telemetry.py
tapestry-csm-sim/tests/: CMakeLists.txt
tapestry-csm-sim/tests/boards/: bbc_microbit_v2.conf  ek_ra8d1.conf  esp_wrover_kit_esp32_procpu.conf
tapestry-csm-sim/tests/src/: main.c
tapestry-csm-sim/zephyr/element/: CMakeLists.txt  prj.conf
tapestry-csm-sim/zephyr/element/src/: comms.c  comms.h  main.c  movement.c  movement.h
tapestry-os/boards/: actuation_null.c  substrate_null.c
tapestry-os/boards/bbc_microbit_v2/: actuation_cutebot.c  bbc_microbit_v2.overlay  cutebot.c  cutebot.h  substrate_cutebot.c
tapestry-os/dts/bindings/: tapestry-harvester.yaml
tapestry-os/include/tapestry/: actuation.h  bse.h  csm.h  runtime.h  scr.h  substrate.h  transceiver.h  transport.h  wire.h
tapestry-os/subsys/bse/: bse.c  bse_stub.c
tapestry-os/subsys/choreo/: choreo.c
tapestry-os/subsys/csm/: state.h  world_model.c  world_model.h
tapestry-os/subsys/runtime/: Kconfig  power.c  power.h  runtime.c
tapestry-os/subsys/scr/: scr.c  scr.h
tapestry-os/subsys/transport/: Kconfig  gossip.c  gossip.h  net_init.c  transceiver_acoustic.c  transceiver_acoustic.h  transceiver_ble.c  transceiver_ble.h  transceiver_chemical.c  transceiver_chemical.h  transceiver_optical.c  transceiver_optical.h  transceiver_udp.c  transceiver_udp.h  transport.c
tapestry-os/subsys/transport/ble/: ble_gossip.c  ble_gossip.h
tapestry-os/subsys/transport/udp/: udp_gossip.c  udp_gossip.h
tapestry-os/tests/csm/: CMakeLists.txt
tapestry-os/tests/csm/src/: main.c
tapestry-scr-hw/: CMakeLists.txt  Kconfig  README.md  prj.conf  wifi.conf.example
tapestry-scr-hw/boards/: bbc_microbit_v2.conf  bbc_microbit_v2.overlay  ek_ra8d1.conf  esp_wrover_kit_esp32_procpu.conf
tapestry-scr-hw/src/: ble_gossip.c  ble_gossip.h  comms.c  comms.h  cutebot.c  cutebot.h  main.c  net_init.h
tapestry-scr-hw/telemetry/: collect.py  collect_serial.py  plot.py  protocol.py
tapestry-scr-sim/: scr_protocol.h
tapestry-scr-sim/orchestrator/: broker.py  main.py  plot.py  protocol.py  scenarios.py  telemetry.py
tapestry-scr-sim/tests/: CMakeLists.txt
tapestry-scr-sim/tests/src/: main.c
tapestry-scr-sim/zephyr/element/: CMakeLists.txt  prj.conf
tapestry-scr-sim/zephyr/element/src/: comms_scr.c  comms_scr.h  main.c
